libs/extractor/src/snapshots/extractor__tests__extract_conditional_style_props-11.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box _hover={b ? void 0 : { bg: \"blue\" }} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment51) => <div className={__devupAssignment51?.[0] ?? \"\"} style={{ ...__devupAssignment51?.[1] }} />)(b ? ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(void 0) : ((__devupField0) => [\n\t__devupField0?.[0] ?? \"\",\n\t__devupField0?.[1],\n\t{ bg: __devupField0?.[2] }\n])(((__devupValue) => [\n\t\"OHdbk4xhyc6_lbsv2t\",\n\t{},\n\t__devupValue\n])(\"blue\")));\n",
}
