libs/extractor/src/snapshots/extractor__tests__extract_conditional_style_props-8.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={a === b ? null : `${b}px`} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "`${b}px`",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment51) => <div className={__devupAssignment51?.[0] ?? \"\"} style={{ ...__devupAssignment51?.[1] }} />)(a === b ? ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(null) : ((__devupValue) => [\n\t\"OHam_8p6yp5f997ony\",\n\t{ \"---SUimport_s_x7b__s_x42_ox_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa__x3c__x42_ox_smargin_x3d__x7b_a_s_x3d__x3d__x3d__sb_s_x3f__snull_s_n_s_x60__x24__x7b_b_x7d_px_x60__x7d__s_l_x3e__x3b__xa_-ay\": __devupValue },\n\t__devupValue\n])(`${b}px`));\n",
}
