libs/extractor/src/snapshots/extractor__tests__extract_conditional_style_props-9.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={a === b ? `${b}px` : undefined} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "__devupBranch0[`1`]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupBranch0) => <div className={__devupBranch0[\"0\"] ? \"a\" : \"\"} style={{ \"--b\": __devupBranch0[`1`] }} />)(a === b ? [true, `${b}px`] : [false]);\n",
}
