libs/extractor/src/snapshots/extractor__tests__extract_dynamic_logical_case-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box margin={a ?? b} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "__devupBranch0[`0`]",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 0,
                identifier: "__devupBranch0[`1`]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupBranch0) => <div className=\"a\" style={{ \"--b\": __devupBranch0[\"0\"] !== null && __devupBranch0[\"0\"] !== undefined ? __devupBranch0[`0`] : __devupBranch0[`1`] }} />)(((__devupValue0) => __devupValue0 == null ? [__devupValue0, b] : [__devupValue0])(a));\n",
}
