libs/extractor/src/snapshots/extractor__tests__extract_dynamic_responsive_style_props.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box padding={[someStyleVar,null,someStyleVar1]} margin={[null,someStyleVar2]} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 1,
                identifier: "someStyleVar2",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "someStyleVar",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 2,
                identifier: "someStyleVar1",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment52, __devupAssignment95) => <div className={`${__devupAssignment52?.[0] ?? \"\"} ${__devupAssignment95?.[0] ?? \"\"}`} style={{\n\t...__devupAssignment52?.[1],\n\t...__devupAssignment95?.[1]\n}} />)(((__devupLevel0, __devupLevel1, __devupLevel2) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"} ${__devupLevel2?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1],\n\t\t...__devupLevel2?.[1]\n\t},\n\t[\n\t\t__devupLevel0?.[2],\n\t\t__devupLevel1?.[2],\n\t\t__devupLevel2?.[2]\n\t]\n])(((__devupValue) => [\n\t\"OHcei841mg9vs9qlwa\",\n\t{ \"---SUHc1dmkcnsfx297kii-az\": __devupValue },\n\t__devupValue\n])(someStyleVar), ((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(null), ((__devupValue) => [\n\t\"OHdeq_mrm5j1mqrovj\",\n\t{ \"---SUHc1dmkcnsfx297kii-az-c\": __devupValue },\n\t__devupValue\n])(someStyleVar1)), ((__devupLevel0, __devupLevel1) => [\n\t`${__devupLevel0?.[0] ?? \"\"} ${__devupLevel1?.[0] ?? \"\"}`,\n\t{\n\t\t...__devupLevel0?.[1],\n\t\t...__devupLevel1?.[1]\n\t},\n\t[__devupLevel0?.[2], __devupLevel1?.[2]]\n])(((__devupValue) => [\n\t\"\",\n\t{},\n\t__devupValue\n])(null), ((__devupValue) => [\n\t\"OHbniclhz632yhwliq\",\n\t{ \"---SUHc1dmkcnsfx297kii-b5-b\": __devupValue },\n\t__devupValue\n])(someStyleVar2)));\n",
}
